configuracion de gunicorn en nginx

--- a/proyecto-django/proyectoFinal/administrativoCanton/static/css/estilos.css
+++ b/proyecto-django/proyectoFinal/administrativoCanton/static/css/estilos.css
@@ -76,9 +76,24 @@ body {
     text: #FFF;
   
   }
+
+    /*
+  Custom css
+  */
+
+  .tableCenter{
+    margin: auto;
+  }
+
+  .initialImages{
+    width: 50%;
+  } 
   
   footer{
     background: #5E5E5E;
     color: #FFF;
   }
-  
+ 
+
+
+
