--- a/proyecto-django/proyectoFinal/administrativoCanton/templates/index.html
+++ b/proyecto-django/proyectoFinal/administrativoCanton/templates/index.html
@@ -1,48 +1,27 @@
 {% extends "master.html" %}
 
+<head>
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/estilos.css' %}">
+</head>
 {% block title %}
-  Listado de Estudiantes
+  Proyecto Final
 {% endblock %}
 
 {% block content %}
-<h3>Número de estudiantes {{ numero_casas }}</h3>
-
-<table id="tabla_datos">
-
-  <thead>
-    <tr>
-      <th>Propietario</th>
-      <th>Dirección</th>
-      <th>Valor</th>
-      <th>Color</th>
-      <th>Número de cuartos</th>
-      <th>pisos</th>
-      <th>barrio</th>
-    </tr>
-  </thead>
-
-  {% for e in casas %}
+<br><br><br>
+<table class="tableCenter" style="margin: auto;">
   <tr>
-    <td> {{e.prop_casa}}</td>
-    <td> {{e.direccion_casa}}</td>
-    <td> {{e.valor_casa}}</td>
-    <td> {{e.color}}</td>
-    <td> {{e.cuartos_casa}}</td>
-    <td> {{e.pisos}}</td>
-    <td> {{e.barrio}}</td>
-    <td> <a href="{% url 'editar_casa' e.id %}">editar</a> <br>
-      <a href="{% url 'eliminar_casa' e.id %}"
-      onclick="return confirm('¿Está seguro de la eliminación?')" >
-      eliminar</a>
-    </td>
-
+    <th>Casas</th>
+    <th>Departamentos</th>
   </tr>
-  {% endfor %}
+  <tr>
+    <th>
+      <a href="{% url 'ver_casas' %}"><img src="../static/images/casa.png" alt="casas" class="initialImages" style="width: 50%; padding: 0;"></a>
+    </th>
+    <th>
+      <a href="{% url 'ver_departamentos' %}"><img src="../static/images/departamentos.png" alt="departamentos"></a>
+    </th>
+  </tr>
 </table>
-
-<script type="text/javascript">
-  $(document).ready( function () {
-    $('#tabla_datos').DataTable();
-  });
-</script>
 {% endblock %}
