--- a/proyecto-flask/templates/losbarrios.html
+++ b/proyecto-flask/templates/losbarrios.html
@@ -1,20 +1,31 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Barrios</title>
-  </head>
-  <body>
-    <h5>Listado de Barrios</h5>
+{% extends "master.html" %}
 
-    {% for b in barrios %}
+{% block title %}
+  Listado de Barrios
+{% endblock %}
 
-    <ol>
-      <li><b>Nombre: </b>{{b['nombre_barrio']}}</li>
-      <li><b>Siglas: </b>{{b['siglas']}}</li>
-    </ol>
-    <hr>
-    {% endfor%}
-  </body>
-</html>
+{% block content %}
+
+<table id="tabla_datos">
+
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Iniciales</th>
+    </tr>
+  </thead>
+
+  {% for e in barrios %}
+  <tr>
+    <td> {{e.nombre_barrio}}</td>
+    <td> {{e.siglas}}</td>
+  </tr>
+  {% endfor %}
+</table>
+
+<script type="text/javascript">
+  $(document).ready( function () {
+    $('#tabla_datos').DataTable();
+  });
+</script>
+{% endblock %}
