--- a/proyecto-django/proyectoFinal/administrativoCanton/templates/index.html
+++ b/proyecto-django/proyectoFinal/administrativoCanton/templates/index.html
@@ -10,17 +10,17 @@
 
 {% block content %}
 <br><br><br>
-<table class="tableCenter" style="margin: auto;">
+<table class="tableCenter">
   <tr>
     <th>Casas</th>
     <th>Departamentos</th>
   </tr>
   <tr>
-    <th>
-      <a href="{% url 'ver_casas' %}"><img src="../static/images/casa.png" alt="casas" class="initialImages" style="width: 50%; padding: 0;"></a>
+    <th style = "padding: 0px;">
+      <a href="{% url 'ver_casas' %}"><img src="{% static 'images/casa.png' %}" alt="casas" class="initialImages"></a>
     </th>
     <th>
-      <a href="{% url 'ver_departamentos' %}"><img src="../static/images/departamentos.png" alt="departamentos"></a>
+      <a href="{% url 'ver_departamentos' %}"><img src="{% static 'images/departamentos.png' %}" alt="departamentos"></a>
     </th>
   </tr>
 </table>
