--- a/proyecto-django/proyectoFinal/administrativoCanton/templates/verDepartamentos.html
+++ b/proyecto-django/proyectoFinal/administrativoCanton/templates/verDepartamentos.html
@@ -1,11 +1,11 @@
 {% extends "master.html" %}
 
 {% block title %}
-  Listado de Estudiantes
+  Listado de Departamentos
 {% endblock %}
 
 {% block content %}
-<h3>Número de estudiantes {{ numero_casas }}</h3>
+<h3>Número de Deparatamentos {{ numero_departamentos }}</h3>
 
 <table id="tabla_datos">
 
@@ -14,25 +14,23 @@
       <th>Propietario</th>
       <th>Dirección</th>
       <th>Valor</th>
-      <th>Color</th>
       <th>Número de cuartos</th>
-      <th>Pisos</th>
+      <th>Mensualidad</th>
       <th>Barrio</th>
       <th>Opciones</th>
     </tr>
   </thead>
 
-  {% for e in casas %}
+  {% for e in departamentos %}
   <tr>
-    <td> {{e.prop_casa}}</td>
-    <td> {{e.direccion_casa}}</td>
-    <td> {{e.valor_casa}}</td>
-    <td> {{e.color}}</td>
-    <td> {{e.cuartos_casa}}</td>
-    <td> {{e.pisos}}</td>
+    <td> {{e.prop_dept}}</td>
+    <td> {{e.direccion_dept}}</td>
+    <td> {{e.valor_dept}}</td>
+    <td> {{e.cuartos_dept}}</td>
+    <td> {{e.mensualidad}}</td>
     <td> {{e.barrio}}</td>
-    <td> <a href="{% url 'editar_casa' e.id %}">editar</a> <br>
-      <a href="{% url 'eliminar_casa' e.id %}"
+    <td> <a href="{% url 'editar_departamento' e.id %}" class="opciones">editar</a> <br>
+      <a href="{% url 'eliminar_departamento' e.id %}" class="opciones"
       onclick="return confirm('¿Está seguro de la eliminación?')" >
       eliminar</a>
     </td>
